save text media to file + edit media caption ok

--- a/SLAT/css/lomak.css
+++ b/SLAT/css/lomak.css
@@ -452,12 +452,19 @@ td
 .textMediaBox
 {
     width:310px; 
-    height:190px;
+    padding:2px;
+    border:1px solid black;   
+    border-radius: 5px;
 }
 
 .leftButtonAddMedia
 {
 	margin-right: 85px !important;
+}
+
+.leftButtonImport
+{
+	margin-right: 325px !important;
 }
 
 /* Align Close button */
